# dipanddash

./: .gitignore  Dip Nd Dash & snookers Snacks & beavarge -13-Apr-26.xlsx  Dip&Dash & 147 snookers & PS games-17 -Apr-26(147 Snooker Lounge).csv  Snooker's Bevarage Purchase Details -30-Apr-26.xlsx  incredients.xlsx  incredientsss.xlsx  menus.xlsx  products_consumption.xlsx  prodyuct_sales_snooker.csv  purchase.xlsx  snookerproducts.xlsx
backend/: .env.example  .env.production.example  .gitignore  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/api/: index.ts
backend/scripts/: import_snooker_bookings_from_csv.js  prepare_legacy_workbook_import.py  prepare_menu_item_import.py  prepare_purchase_workbook_import.py
backend/src/: app.ts  server.ts
backend/src/common/: api-response.ts
backend/src/config/: env.ts  uploads.ts
docs/: POS_DESKTOP_PHASE1.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: main.tsx
pos-desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
pos-desktop/scripts/: delete-local-invoice.mjs  reset-local-db.mjs
pos-desktop/src/: main.tsx  vite-env.d.ts
pos-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater.conf.json
pos-desktop/src-tauri/capabilities/: default.json
pos-desktop/src-tauri/icons/: icon.icns
pos-desktop/src-tauri/src/: lib.rs  main.rs
(+465 files in other folders)
