[package]
name = "dip_dash_pos"
version = "0.1.3"
description = "Dip & Dash Staff POS desktop application"
authors = ["Dip & Dash Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
